Fixed some layout issues and added some jquery functionality

--- a/assets/sass/modules/_article.sass
+++ b/assets/sass/modules/_article.sass
@@ -131,31 +131,41 @@
 //FORM
 #contact-form
     padding-top: 2rem
+    h2
+        padding-bottom: 0
 .contact-form
-    width: 450px
+    display: flex
+    flex-flow: column wrap
+    justify-content: center
+    width: 500px
     margin: 0 auto 4rem auto
-    display: block
-    position: relative
     box-sizing: border-box
-    clear: both
-
     textarea
         resize: none
-
-    input, textarea
+    input[type=text], textarea
         font-size: 1rem
         color: $color-white
         width: 100%
         padding: .7rem
-        margin: .3rem
+        margin: .7rem
         background: darken($color-base-subtle, 2%)
+        border-radius: 4px
         border: none
         &:focus
             outline: none
-            border-right: 2px solid $color-brand-accent
+            border-bottom: 3px solid $color-brand-accent
+        &::placeholder
+            color: $color-base
+            opacity: 1
+    input[type=submit]
+        align-self: center
+        cursor: pointer
+        border: 1px solid $color-brand
+    label
+        display: none
 
 @media (max-width: 859px)
     .contact-form
-        width: 100%
+        max-width: 90%
+        padding: 1rem
         display: block
-        position: relative
