--- a/assets/sass/modules/_header.sass
+++ b/assets/sass/modules/_header.sass
@@ -1,4 +1,5 @@
 //HEADER
+#header__nav--fixed,
 .intro__section--navbar
     display: flex
     justify-content: space-between
@@ -16,9 +17,8 @@
     .intro__navbar--list
         li
             display: inline
-            &:nth-of-type(1n+2)
-                padding-left: 2rem
-            a
+            span
+                cursor: pointer
                 text-decoration: none
                 color: $color-base
                 padding-bottom: .3rem
@@ -26,9 +26,14 @@
                 &:hover
                     color: $color-white
                     border-bottom: 2px solid $color-brand-accent
+            &:nth-of-type(1n+2)
+                padding-left: 2rem
+
 
 //MEDIA QUERIES
 /* For mobile phones: */
 @media only screen and (max-width: 637px)
-    .intro__navbar--list
-        display: none
+    #header--nav-fixed
+        display: inline
+        margin: 0 auto
+        max-width: 100%
